# myshell

./: .gitignore  CMakeLists.txt  README.md
inc/: builtins.h  command.h  helpers.h  myls.h  myshell.h
src/: builtins.cpp  command.cpp  helpers.cpp  mycat.c  mycp.cpp  mygrep.cpp  myls.cpp  mymkdir.cpp  mymv.cpp  myrm.cpp  myshell.cpp
